--- a/www/theme-brutalist.css
+++ b/www/theme-brutalist.css
@@ -107,6 +107,9 @@ h1.listing {
 	font-family: Anonymous Pro;
 	font-size: 1.75rem;
 }
+h1.listing a {
+	padding: 0 0 0 1.5px;
+}
 
 #comments {
 	border-top: 2px solid #000;
